<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:clickable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/primaryLight">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_about"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about" />

            <TextView
                android:id="@+id/tv_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_upload"
                android:layout_width="match_parent"
                android:background="?attr/selectableItemBackground"
                android:layout_height="48dp">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textStyle="bold"
                    android:text="@string/backup_manual" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_backup"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_state"
                        style="@style/Base.TextAppearance.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_count"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="sub" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_stop"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="16dp"
                    android:textStyle="bold"
                    android:text="@string/backup_stop"
                    android:textColor="@color/primaryDark"
                    android:visibility="visible" />

                <ProgressBar
                    android:id="@+id/pb_upload"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:visibility="visible" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/light_gray"/>

            <!--<RelativeLayout-->
                <!--android:id="@+id/rl_account_default"-->
                <!--android:layout_width="match_parent"-->
                <!--android:background="?attr/selectableItemBackground"-->
                <!--android:layout_height="48dp">-->

                <!--<TextView-->
                    <!--style="@style/Base.TextAppearance.AppCompat.Button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:textStyle="bold"-->
                    <!--android:text="@string/settings_account_default" />-->

            <!--</RelativeLayout>-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/rl_account_coco"-->
                <!--android:layout_width="match_parent"-->
                <!--android:background="?attr/selectableItemBackground"-->
                <!--android:layout_height="48dp">-->

                <!--<TextView-->
                    <!--style="@style/Base.TextAppearance.AppCompat.Button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:textStyle="bold"-->
                    <!--android:text="@string/settings_account_coco" />-->

            <!--</RelativeLayout>-->

            <RelativeLayout
                android:id="@+id/rl_inactive"
                android:layout_width="match_parent"
                android:background="?attr/selectableItemBackground"
                android:layout_height="48dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:textStyle="bold"
                android:text="@string/title_activity_inactive_photos" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_account_logout"
                android:layout_width="match_parent"
                android:background="?attr/selectableItemBackground"
                android:layout_height="48dp">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:textStyle="bold"
                    android:text="@string/settings_account_logout" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
